<resources>
    <string name="app_name_short">Craft Santhe</string>
    <string name="app_name_long">Crafts and Gifts Santhe</string>
    <string name="back">Back</string>
    <string name="enter_phone_number">Enter Phone number</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="re_enter_your_password">Re-enter your password</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="login">Login</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="account_has_been_created">Your account has been created. Please login.</string>
    <string name="details_updated">Your details have been saved</string>
    <string name="loading">Loading</string>
    <string name="seller">Seller</string>
    <string name="buyer">Buyer</string>
    <string name="are_you_a">Are you a</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="submit">Submit</string>
</resources>